# openxmpp

./: Makefile.am  configure.in
include/: Makefile.am
include/openxmpp/: Makefile.am  SocketExceptions.h  TCPSocket.h  TCPSocketHandler.h  XMPPConnection.h
lib/: Makefile.am  TCPSocket.cpp  XMPPConnection.cpp
test/: Makefile.am  launcher.cpp
win32/: export.h  launcher.vcproj  openxmpp.cpp  openxmpp.sln  openxmpp.vcproj  test_openxmpp.cpp  test_openxmpp.vcproj
